--- a/.github/workflows/github-metrics.yml
+++ b/.github/workflows/github-metrics.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
+    environment: 
+      name: production
     steps:
       - uses: lowlighter/metrics@latest
         with:
