--- a/.github/workflows/github-metrics.yml
+++ b/.github/workflows/github-metrics.yml
@@ -2,14 +2,14 @@
 name: Metrics
 on:
   # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
+  schedule: [{ cron: "0 * * * *" }]
   # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push: { branches: ["master", "main"] }
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: production
     permissions:
       contents: write
@@ -129,9 +129,9 @@ jobs:
           plugin_skyline_frames: 60
           plugin_skyline_quality: 0.5
           plugin_skyline_settings:
-            url: "https://skyline.github.com/${login}/${year}",
-            ready: "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-            wait: 1,
+            url: "https://skyline.github.com/${login}/${year}"
+            ready: "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')"
+            wait: 1
             hide: "button, footer, a"
 
           plugin_skyline_year: 2024
