--- a/.github/workflows/github-metrics.yml
+++ b/.github/workflows/github-metrics.yml
@@ -171,4 +171,5 @@ jobs:
           plugin_tweets_attachments: yes
           plugin_tweets_limit: 2
           plugin_tweets_user: BluscreamLP
+          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
           repositories_forks: yes
