--- a/.github/workflows/github-metrics.yml
+++ b/.github/workflows/github-metrics.yml
@@ -160,6 +160,7 @@ jobs:
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
           plugin_stargazers_worldmap: yes
+          plugin_stargazers_worldmap_token: ${{ secrets.GOOGLE_MAPS_TOKEN }}
           
           plugin_starlists: yes
           plugin_starlists_languages: yes
